--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,6 @@
      -->
     <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
     <body>
         <header role="banner">
            <a href="#main-skip" class="skip">Skip to main content</a>
@@ -75,7 +74,7 @@
    <footer role="banner">
     <div class="foot-wrap">
         <div class="foot">
-            <p>COPYRIGHT © 2023 ORVATURE </p>
+            <p>COPYRIGHT © ORVATURE 2023 </p>
         </div>
     </div>
 </footer>
