--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header role="banner">
         <!-- adds skip links -->
-       <a href="#main-skip" class="skip">Skip to main content</a>
+       <a href="#main-skip" class="skip">Main Content</a>
        <!-- adds wrapper to header part to center align content -->
        <div class="header_ container">
            <div class="header">
