--- a/contact.html
+++ b/contact.html
@@ -42,9 +42,13 @@
                  <div class="contactbox" itemscope itemtype="https://schema.org/LocalBusiness">
                      <h2>You can find us at</h2>
                      <h4>EMAIL</h4>
-                     <p itemprop="email">contact@orvature.com</p>
+                     <p itemprop="email">orvature@gmail.com
+                        insta : orvature
+                        vero : orvature
+                        facebook : orvature
+                     </p>
                      <h4>PHONE NUMBER</h4>
-                     <p itemprop="telephone">613-777-XXXX</p>
+                     <p itemprop="telephone">613-777-2255</p>
                      <h4>ADDRESS</h4>
                      <p itemprop="address" itemscope itemtype="https://schema.org/PostalAddress"> 
                          <span itemprop="name">Orvature Photography</span> <br>
