--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 </head>
     <body>
         <header role="banner">
-           <a href="#main-skip" class="skip">Skip to main content</a>
+           <a href="#main-skip" class="skip">Main Content</a>
            <div class="head_container">
                <div class="header">
                    <img class="logo" src="images/logo.png" alt="Orvature logo">
